src/components/Layout/layout.scss
@import "../../styles/variables";
$theme-colors: (
  "primary": $primary-color
);

@import "~bootstrap/scss/bootstrap";
.main{
  background-color:#e0e0db;
}
.container-fluid{
  margin:0;
  padding:0;
}
.body .html{
  font-family:'Lato' !important;
  width:100%;
  line-height: 1.5;
}
.content{
  padding: 20vh 25vw 10vh;
  font-family: 'Lato';
}
.primary-color{
  color: $primary-color;
}
h1{
  color: $primary-color;
  text-align: center;
}
h4 , h2{
  color: $primary-color;
}
a{
  color: $primary-color;
  text-decoration: underline;
}
@media (max-width: 768px){
  .content {
    padding:5px;
  }
}

